# trcc-display

./: .gitignore  Cargo.toml  Dockerfile  NOTICE  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
.pi-subagents/artifacts/: 89bef89b_reviewer_0_input.md  89bef89b_reviewer_0_meta.json  89bef89b_reviewer_0_transcript.jsonl  8cef4ea9_reviewer_0_input.md  8cef4ea9_reviewer_0_meta.json  8cef4ea9_reviewer_0_output.md  8cef4ea9_reviewer_0_transcript.jsonl
config/: config.json  config.sensors.json  config.sim.json
config/profiles/: ax120.json  pa120.json  ps120.json
docs/: README.md  api-reference.md  architecture.md  cli-reference.md  config-reference.md  getting-started.md  profiles.md  troubleshooting.md
packaging/systemd/: trcc-display.service
packaging/udev/: 99-thermalright-trcc.rules
src/: api.rs  config.rs  engine.rs  lib.rs  main.rs  preview.rs  profile.rs  prometheus.rs  protocol.rs  render.rs  sensors.rs  source.rs  state.rs  usb.rs  util.rs
static/: preview.html
tests/: api.rs  integration.rs  render_pipeline.rs
